Update about text

--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -3,8 +3,15 @@ title: About
 slug: "/about"
 ---
 
-Hi!
+Salve família! Sou Lucas Fernandes, um pequeno padawan com algum interesse
+e conhecimento em programação e pixel art de São Paulo, Brasil para o mundo!
 
-Remus Lupin - also known as Moony - is currently teaching "Defense against the Dark Arts" at Hogwarts. He was afflicted with lycanthropy during his childhood, as a result of Fenrir Greyback's revenge against Lyall. He attended Hogwarts School of Witchcraft and Wizardry from 1971-1978 and was Sorted into Gryffindor House. During his school years he was one of the Marauders, best friends with Sirius Black, James Potter, and Peter Pettigrew. Together they created the Marauder's Map.
+Meu objetivo atual é de melhorar minha habilidade de desenho no geral e
+compartilhar os conteúdos que eu julgar interessantes nessa minha jornada de
+aprender pixel art.
 
-He fought against Death Eaters once more in the Second Wizarding War, during which he lost his friend Sirius. In 1997, Remus married fellow Order member Nymphadora Tonks and had a son, Edward Remus Lupin, of whom he named Harry the godfather. Remus fought at the Battle of Hogwarts on 2 May, 1998, during which his wife was murdered by Bellatrix Lestrange. Remus was also murdered by Death Eater, Antonin Dolohov, during the first half of the same battle. His death was avenged by Filius Flitwick.
+No meu tempo livre gosto muito de ler livros de ficção e fantasia, jogar vídeo
+game, tomar uma bela de uma cervejinha e assistir coisas antigas e toscas, ou
+só assitir um Netflix bem confortável e gostosinho.
+
+That's all for now folks! :)
