--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -1,3 +1,3 @@
-Saudações
+Saudações!
 
 Vc por aqui? Nossa, que honra! Aproveita que tem pedacinhos de conhecimento prontinho pra vc. Todos quentinhos e recheados de pequenas vontade de te abraçar.
