Fix some misspeling from resource spriters post

--- a/content/posts/the-spriters-resource-site-com-colecao-de-materiais-de-video-game/index.mdx
+++ b/content/posts/the-spriters-resource-site-com-colecao-de-materiais-de-video-game/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "The Spriters Resource: Site com coleção de materiais de vídeo games"
+title: "The Spriters Resource: O site com coleção de materiais de vídeo games"
 date: 2020-08-06
 description:
 tags:
@@ -12,11 +12,11 @@ banner:
 Dia desses logo após encher o buchinho com o almoço no meu momento feliz do dia,
 coloquei um vídeo aleatório do canal do Youtube do [MortMort](https://www.youtube.com/user/atMNRArt)
 pra ver enquanto fazia minha digestão. O canal tem sido um dos meus preferidos
-nesse meu inicio de procura por conteúdos de pixel art. Ele é um dos que mais tem me chamado
+nesse meu início de procura por conteúdos de pixel art. Ele é um dos que mais tem me chamado
 atenção pela vasta quantidade de vídeos explicativos e técnicos sobre pixel art.
 Super recomendo!
 
-No [vídeo](https://www.youtube.com/watch?v=cWKhytYUGTg&t=70s) que pregou minha atenção
+O [vídeo](https://www.youtube.com/watch?v=cWKhytYUGTg&t=70s) que pregou minha atenção
 ele compartilha dicas, truques e tutoriais da interweb. E uma das dicas foi a que
 originou esse post.
 
@@ -24,18 +24,18 @@ originou esse post.
 
 O [The Spriters Resource](https://www.spriters-resource.com) foi justamente uma
 dessas dicas que ele soltou no vídeo.
-O site nada mais é do que uma grande coleção de materiais de vídeo game muito massa.
+O site nada mais é do que uma grande coleção muito massa de materiais de vídeo game.
 Dentre recursos disponíveis vc encontra sprites, modelos, texturas e sons.
 
-Fiquei super animado para acessar o site pra dar uma olhadinha. O primeira sprite
-que bati o olho foi a do The Legend of Zelda do Nintendo. Saco só que da ora:
+Fiquei super animado para acessar o site pra dar uma olhadinha. O primeiro sprite
+que bati o olho foi a do The Legend of Zelda do Nintendo. Saca só que da ora:
 
 ![The Legend of Zelda - Link](./nes_the_legend_of_zelda_link.png)
 
 ![The Legend of Zelda - Dungeon Enemies](./nes_the_legend_of_zeld_dungeon_enemies.png)
 
-Na minha opinião o achado é uma mina de ouro seja para fins de estudo,
-para estimular a criatividade no design de seus personagens, ou apenas para
+Na minha humilde opinião o achado é uma mina de ouro seja para fins de estudo,
+para estimular a criatividade no design de personagens, ou apenas para
 trazer de volta uma pouco da nostalgia dos jogos que fizeram parte da sua vida.
 
 O site foi um grande motivador pra montar esse blog. Então, quem venha a ler
