Update with minor changes on TTFA posts

--- a/content/posts/the-twelve-factor-app-config/index.mdx
+++ b/content/posts/the-twelve-factor-app-config/index.mdx
@@ -31,7 +31,7 @@ might be compromised.
 
 Another approach involves using configuration files not
 included in the version control system, such as
-'config/database.yml' in Rails. While this is a significant
+`config/database.yml` in `Rails`. While this is a significant
 improvement, it is not recommended because there's a risk of
 accidentally pushing these files. Additionally, configuration
 files often scatter across different locations, making
@@ -59,5 +59,5 @@ deployments.
 
 _This Twelve-Factor App post series is a means for me to consolidate
 the knowledge I've gained while studying these rules. Please feel free to visit 
-[the site](https://12factor.net/pt_br/) for more detailed explanations.
+[the site](https://12factor.net/) for more detailed explanations.
 That's all folks!_
