--- a/content/posts/the-twelve-factor-app-codebase/index.mdx
+++ b/content/posts/the-twelve-factor-app-codebase/index.mdx
@@ -43,5 +43,5 @@ development during the development cycle.
 
 _This Twelve-Factor App post series is a means for me to consolidate the knowledge
 I've gained while studying these rules. Please feel free to visit 
-[the site](https://12factor.net/pt_br/) for more detailed explanations.
+[the site](https://12factor.net/) for more detailed explanations.
 That's all folks!_
