--- a/content/posts/the-twelve-factor-app-introduction/index.mdx
+++ b/content/posts/the-twelve-factor-app-introduction/index.mdx
@@ -42,5 +42,5 @@ discussing these issues, and offer solutions to address these challenges.
 
 _This Twelve-Factor App post series is a means for me to consolidate the knowledge
 I've gained while studying these rules. Please feel free to visit 
-[the site](https://12factor.net/pt_br/) for more detailed explanations.
+[the site](https://12factor.net/) for more detailed explanations.
 That's all folks!_
