--- a/content/posts/the-twelve-factor-app-concurrency/index.mdx
+++ b/content/posts/the-twelve-factor-app-concurrency/index.mdx
@@ -32,7 +32,7 @@ facilitates simple and reliable addition of concurrency.
 
 Furthermore, the text emphasizes that twelve-factor app processes should
 refrain from daemonizing or writing PID files. Instead, reliance on the
-operating system’s process manager (like `systemd`` or cloud platform-based
+operating system’s process manager (like `systemd` or cloud platform-based
 distributed process managers) or tools such as `Foreman` during development is
 encouraged. These tools effectively manage output streams, handle crashed
 processes and address user-initiated restarts and shutdowns.
